# zipinfo

./: README.md  docker-compose.yaml
backend/: .gitignore  Dockerfile  entrypoint.sh  log_conf.json  main.py  pyproject.toml
backend/application/: app.py
backend/application/entities/: __init__.py  report.py  upload.py
backend/application/routes/: __init__.py  dependencies.py  reports.py  uploads.py
backend/application/schemas/: __init__.py  base.py  reports.py  uploads.py
backend/application/tasks/: __init__.py  archive_processing.py
backend/domain/models/: report.py
backend/domain/services/: __init__.py  archive_service.py  report_service.py  upload_service.py
backend/infrastructure/adapters/: __init__.py  minio.py  sso.py
backend/infrastructure/adapters/sq/: __init__.py  sonarqube.py  types.py
backend/infrastructure/database/: __init__.py  base.py  init.py
backend/infrastructure/settings/: object_storage.py  postgres.py  settings.py  sq.py  sso.py
backend/migration/: env.py
backend/migration/versions/: 0398963c180e_nullable_upload_id.py  0704dc744990_initial.py
backend/tests/: test_models.py
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
keycloak/: myrealm-realm.json
sq-dummy/: Dockerfile  main.py  pyproject.toml
sso/: main.py  pyproject.toml
