[tool.poetry]
name = "sq-dummy"
version = "0.1.0"
description = ""
authors = ["Dmitry Nosov <millttt7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["standard"] }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
