[tool.poetry]
name = "sso"
version = "0.1.0"
description = ""
authors = ["Dmitry Nosov <millttt7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = ">=0.115.12,<0.116.0", extras = ["standard"] }
pydantic-settings = ">=2.8.1,<3.0.0"
python-keycloak = ">=5.5.0,<6.0.0"
httpx = ">=0.28.1,<0.29.0"
redis = ">=5.2.1,<6.0.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.5"


[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"

[tool.ruff]
line-length = 120
